Remove symlink to README.md, as automake now supports README.md directly

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 # Top-level Makefile.am
 #
-# (c) Reuben Thomas 2011-2020
+# (c) Reuben Thomas 2011-2024
 #
 # The package is distributed under the GNU General Public License version 3,
 # or, at your option, any later version.
@@ -12,7 +12,7 @@ SUBDIRS = lib src tests doc
 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = m4/gnulib-cache.m4 README.md
+EXTRA_DIST = m4/gnulib-cache.m4
 
 release: distcheck
 	git diff --exit-code && \
